# zarrs_conventions

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml
src/: attributes.rs  lib.rs  registry.rs  tests.rs  traits.rs
zarrs_conventions/: Cargo.toml  README.md
zarrs_conventions/src/: attributes.rs  convention.rs  lib.rs  registry.rs  traits.rs
zarrs_conventions/tests/: integration.rs
zarrs_conventions_license/: Cargo.toml  README.md
zarrs_conventions_license/src/: lib.rs
zarrs_conventions_license/tests/: integration.rs
zarrs_conventions_thumbnails/: Cargo.toml  README.md
zarrs_conventions_thumbnails/src/: lib.rs  v1.rs  v2.rs
zarrs_conventions_thumbnails/tests/: integration.rs  integration_v1.rs  integration_v2.rs
zarrs_conventions_uom/: Cargo.toml  README.md
zarrs_conventions_uom/src/: lib.rs
zarrs_conventions_uom/tests/: integration.rs
