[package]
name = "zarrs_conventions"
version = "0.1.0"
edition = "2024"

[dependencies]
ctor = { version = "0.6.3", default-features = false, features = ["__no_warn_on_missing_unsafe", "proc_macro"] }
iref = { version = "3.2.2", features = ["macros", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde"] }
