[workspace]
members = ["zarrs_conventions", "zarrs_conventions_license", "zarrs_conventions_uom"]
default-members = ["zarrs_conventions"]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
iref = { version = "3.2.2", features = ["macros", "serde"] }
ctor = { version = "0.6.3", default-features = false, features = [
    "__no_warn_on_missing_unsafe",
    "proc_macro",
] }
rstest = "0.26.1"
uuid = { version = "1.19.0", features = ["serde"] }
