[package]
name = "zarrs_conventions"
version = "0.1.0"
edition = "2024"
description = "Zarr conventions for the zarrs ecosystem"
license = "MIT"
repository = "https://github.com/clbarnes/zarrs_conventions"

[dependencies]
iref = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde"] }
ctor = { workspace = true }
