[package]
name = "zarrs_conventions"
version = "0.1.1"
edition = "2024"
description = "Zarr conventions for the zarrs ecosystem"
license = "MIT"
repository = "https://github.com/clbarnes/zarrs_conventions"

[dependencies]
iref = { workspace = true }
serde = {workspace = true}
serde_json = { workspace = true }
thiserror = "2.0.17"
uuid = { workspace = true }
ctor = { workspace = true }

[dev-dependencies]
rstest = {workspace = true}
