[package]
name = "zarrs_conventions_license"
version = "0.1.1"
edition = "2024"
description = "License zarr-convention for the zarrs ecosystem"
license = "MIT"
repository = "https://github.com/clbarnes/zarrs_conventions"

[dependencies]
zarrs_conventions = { path = "../zarrs_conventions", version = "0.1"}
serde = { workspace = true }
serde_json = { workspace = true }
iref = { workspace = true }
ctor = { workspace = true }
