[package]
name = "zarrs_conventions_thumbnails"
version = "0.1.0"
edition = "2024"
description = "Thumbnails zarr-convention for the zarrs ecosystem"
license = "MIT"
repository = "https://github.com/clbarnes/zarrs_conventions"

[dependencies]
zarrs_conventions = { path = "../zarrs_conventions", version = "0.1.1" }
serde = { workspace = true }
serde_json = { workspace = true }
iref = { workspace = true }
ctor = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
